# DataLakehouse

./: .env.example  .gitignore  README.md  docker-compose.yaml  io_config.yaml  pyproject.toml
docs/: ARCHITECTURE_MODERN_STACK.md  DEPLOYMENT_GUIDE.md  LAKEHOUSE_ARCHITECTURE.md  LAKEHOUSE_REFACTORING_SUMMARY.md  PIPELINE_GUIDE.md  RUSTFS_LAYER_READER_GUIDE.md  TESTING_CHECKLIST.md  VARIABLES_REFERENCE.md  architecture.md
grafana/provisioning/dashboards/: lakehouse_monitoring.json
mage/data_exporters/: csv_to_rustfs_silver.py  load_csv_reporting_clickhouse.py  load_to_clickhouse.py
mage/data_loaders/: extract_csv_from_rustfs.py  extract_postgres.py
mage/pipelines/etl_csv_upload_to_reporting/: metadata.yaml  triggers.yaml
mage/pipelines/etl_postgres_to_lakehouse/: triggers.yaml
mage/transformers/: clean_csv_for_reporting.py  transform_gold.py
mage/utils/: __init__.py  rustfs_layer_reader.py
postgres/init/: 000_create_app_security.sh
scripts/: create_superset_demo_dashboard.py  demo_to_lakehouse.py  requirements.txt  run_etl_and_dashboard.py  setup.sh  setup_ufw_docker.sh  stackctl.sh  verify_lakehouse_architecture.py
superset/: superset_config.py
